packages/parser/tests/fixtures/grammar/negative/missing-fsf-colon.asfl
module SYSTEM_Bad;
process P ()
FSF
others && true
end_process
end_module
